# xtwitter

./: .gitignore  ChangeLog  LICENSE  Makefile.am  README  configure.ac
debian/: changelog  control  copyright  rules
src/: Makefile.am  libtwitter.c  libtwitter.h  xtwitter.c
