bin_PROGRAMS = xtwitter
xtwitter_SOURCES = xtwitter.c libtwitter.c libtwitter.h
xtwitter_CFLAGS = -g -Wall @X11_CFLAGS@ @IMLIB_CFLAGS@ @GLIB_CFLAGS@ @CURL_CFLAGS@ @XML_CFLAGS@ @LIBNOTIFY_CFLAGS@ @OAUTH_CFLAGS@ @JSON_CFLAGS@
xtwitter_LDFLAGS = @X11_LIBS@ @IMLIB_LIBS@ @GLIB_LIBS@ @CURL_LIBS@ @XML_LIBS@ @LIBNOTIFY_LIBS@ @OAUTH_LIBS@ @JSON_LIBS@
